[tool.poetry]
name = "python_env"
version = "0.0.1"
description = ""
authors = ["d.minhhoang26 <d.minhhoang26@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 189

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0.post1"
unidecode = "^1.3.7"
httpcore = "^1.0.2"
requests = "^2.31.0"
python-multipart = "^0.0.9"
icecream = "^2.1.3"
pandas = "^2.2.3"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
